Refactor Docker setup, add nginx configuration, and update service worker registration

--- a/docker/nginx/conf.d/basic.conf
+++ b/docker/nginx/conf.d/basic.conf
@@ -6,10 +6,6 @@ tcp_nodelay on;
 tcp_nopush on;
 sendfile on;
 
-http2 on;
-
 default_type application/octet-stream;
 
-index /index.html;
-
-resolver ${NGINX_LOCAL_RESOLVERS};
+index index.html /index.html;
