--- a/docker/nginx/conf.d/logging.conf
+++ b/docker/nginx/conf.d/logging.conf
@@ -15,4 +15,4 @@ log_format json_combined escape=json
 '"upstream_status":"$upstream_status"'
 '}';
 
-access_log /dev/stdout json_combined buffer=512k flush=1m;
+access_log off;
