--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,14 +3,14 @@ worker_cpu_affinity auto;
 
 pid /tmp/nginx.pid;
 
-error_log /dev/stderr warn;
+error_log /dev/stderr crit;
 
 worker_rlimit_nofile 65535;
 
 pcre_jit on;
 
 events {
-  worker_connections 4096;
+  worker_connections 1024;
   use epoll;
   multi_accept on;
   accept_mutex off;
