--- a/docker/nginx/snippets/add_header_security_headers.conf
+++ b/docker/nginx/snippets/add_header_security_headers.conf
@@ -1,7 +1,7 @@
 add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 add_header X-Frame-Options "deny" always;
 add_header X-Content-Type-Options "nosniff" always;
-add_header Content-Security-Policy "default-src 'self'; form-action 'self'; base-uri 'self'; object-src 'none'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content" always;
+add_header Content-Security-Policy "default-src 'self' https://jsonplaceholder.typicode.com; form-action 'self'; base-uri 'self'; object-src 'none'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content" always;
 add_header X-Permitted-Cross-Domain-Policies "none" always;
 add_header Referrer-Policy "no-referrer" always;
 add_header Cross-Origin-Embedder-Policy "require-corp" always;
