--- a/docker/nginx/snippets/add_header_security_headers_nonce.conf
+++ b/docker/nginx/snippets/add_header_security_headers_nonce.conf
@@ -1,11 +1,10 @@
 sub_filter_once off;
-sub_filter_types *;
 sub_filter **SERVER-GENERATED-NONCE** $request_id;
 
 add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 add_header X-Frame-Options "deny" always;
 add_header X-Content-Type-Options "nosniff" always;
-add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-$request_id'; form-action 'self'; base-uri 'self'; object-src 'none'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content" always;
+add_header Content-Security-Policy "default-src 'self' https://jsonplaceholder.typicode.com; script-src 'self' 'nonce-$request_id'; form-action 'self'; base-uri 'self'; object-src 'none'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content" always;
 add_header X-Permitted-Cross-Domain-Policies "none" always;
 add_header Referrer-Policy "no-referrer" always;
 add_header Cross-Origin-Embedder-Policy "require-corp" always;
