Refactor Nginx configuration and enhance performance settings in Docker setup

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,15 +5,12 @@ pid /tmp/nginx.pid;
 
 error_log /dev/stderr crit;
 
-worker_rlimit_nofile 65535;
+worker_rlimit_nofile 1048576;
 
 pcre_jit on;
 
 events {
-  worker_connections 1024;
-  use epoll;
-  multi_accept on;
-  accept_mutex off;
+  worker_connections 65536;
 }
 
 http {
@@ -25,5 +22,73 @@ http {
 
   include /etc/nginx/mime.types;
 
-  include /etc/nginx/conf.d/*.conf;
+  server_tokens off;
+
+  charset utf-8;
+
+  tcp_nodelay on;
+  tcp_nopush on;
+  sendfile on;
+
+  default_type application/octet-stream;
+
+  index index.html /index.html;
+
+  client_max_body_size 16k;
+  client_body_buffer_size 16k;
+  client_body_in_single_buffer on;
+
+  open_file_cache max=100000 inactive=60s;
+  open_file_cache_valid 60s;
+  open_file_cache_min_uses 1;
+  open_file_cache_errors on;
+
+  access_log off;
+  log_not_found off;
+
+  reset_timedout_connection on;
+
+  send_timeout 5s;
+  client_body_timeout 5s;
+  client_header_timeout 5s;
+  resolve_timeout 5s;
+
+  keepalive_requests 1000000;
+
+  server {
+    listen 8080 default_server backlog=65535;
+
+    server_name "";
+
+    root /usr/share/nginx/html;
+
+    include /etc/nginx/snippets/add_header_security_headers.conf;
+    add_header Cache-Control "public, no-cache";
+
+    location / {
+      limit_except GET {
+        deny all;
+      }
+
+      try_files $uri /index.html;
+    }
+
+    location ~* \.html$ {
+      limit_except GET {
+        deny all;
+      }
+
+      include /etc/nginx/snippets/add_header_security_headers.conf;
+      add_header Cache-Control "private, no-store";
+    }
+
+    location ^~ /immutable. {
+      limit_except GET {
+        deny all;
+      }
+
+      include /etc/nginx/snippets/add_header_security_headers.conf;
+      add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+  }
 }
