--- a/compose.yaml
+++ b/compose.yaml
@@ -7,5 +7,12 @@ services:
       - '8080:8080'
     read_only: true
     restart: unless-stopped
+    cap_drop:
+      - ALL
+    ulimits:
+      nofile:
+        soft: 1048576
+        hard: 1048576
+      core: 0
     tmpfs:
-      - /tmp
+      - /tmp:rw,noexec,nodev,nosuid,noatime,size=256m,mode=1777
