--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -11,6 +11,7 @@ pcre_jit on;
 
 events {
   worker_connections 65536;
+  multi_accept on;
 }
 
 http {
@@ -51,12 +52,12 @@ http {
   send_timeout 5s;
   client_body_timeout 5s;
   client_header_timeout 5s;
-  resolve_timeout 5s;
+  resolver_timeout 5s;
 
   keepalive_requests 1000000;
 
   server {
-    listen 8080 default_server backlog=65535;
+    listen 8080 default_server backlog=65535 reuseport;
 
     server_name "";
 
