--- a/package.json
+++ b/package.json
@@ -72,12 +72,7 @@
   "name": "@premierstacks/browser-webpack-typescript-react-app-template",
   "repository": "github:premierstacks/browser-webpack-typescript-react-app-template",
   "scripts": {
-    "build:ci": "webpack-cli build --mode=production --node-env=production --env APP_ENV=ci",
-    "build:development": "webpack-cli build --mode=production --node-env=production --env APP_ENV=development",
-    "build:local": "webpack-cli build --mode=production --node-env=production --env APP_ENV=local",
-    "build:production": "webpack-cli build --mode=production --node-env=production --env APP_ENV=production",
-    "build:qa": "webpack-cli build --mode=production --node-env=production --env APP_ENV=qa",
-    "build:staging": "webpack-cli build --mode=production --node-env=production --env APP_ENV=staging",
+    "build": "webpack-cli build --mode=${NODE_ENV} --node-env=${NODE_ENV} --env APP_ENV=${APP_ENV}",
     "fix:eslint": "eslint --fix .",
     "fix:prettier": "prettier -w .",
     "fix:stylelint": "stylelint --fix ./**/*.{sass,scss,css}",
@@ -90,15 +85,11 @@
     "playwright:failed": "playwright test --last-failed",
     "playwright:headed": "playwright test --headed",
     "playwright:install": "playwright install",
+    "playwright:start": "webpack-cli serve --mode=development --node-env=development --env APP_ENV=playwright",
     "playwright:test": "playwright test",
     "playwright:ui": "playwright test --ui",
     "stan:typescript": "tsc --noEmit",
-    "start:ci": "webpack-cli serve --mode=development --node-env=development --env APP_ENV=ci",
-    "start:development": "webpack-cli serve --mode=development --node-env=development --env APP_ENV=development",
-    "start:local": "webpack-cli serve --mode=development --node-env=development --open --env APP_ENV=local",
-    "start:production": "webpack-cli serve --mode=development --node-env=development --env APP_ENV=production",
-    "start:qa": "webpack-cli serve --mode=development --node-env=development --env APP_ENV=qa",
-    "start:staging": "webpack-cli serve --mode=development --node-env=development --env APP_ENV=staging",
+    "start": "webpack-cli serve  --mode=${NODE_ENV} --node-env=${NODE_ENV} --env APP_ENV=${APP_ENV}",
     "webpack:analyze:development": "webpack-cli build --mode=development --node-env=development --analyze",
     "webpack:analyze:production": "webpack-cli build --mode=production --node-env=production --analyze",
     "webpack:build:development": "webpack-cli build --mode=development --node-env=development",
