--- a/.prettierignore
+++ b/.prettierignore
@@ -5,9 +5,6 @@
 .vscode
 .zed
 
-# svg
-*.svg
-
 # node
 /node_modules
 /package-lock.json
@@ -15,8 +12,19 @@
 # compiled files
 /dist
 
+# environment files
+.env
+
 # playwright
 /test-results
+
+# icons
+/public/favicon*
+/public/icon*
+/public/apple-touch-icon*
+
+# svg
+*.svg
 
 # eslint
 *.tsx
